--- a/infrastructure/docker-compose.yaml
+++ b/infrastructure/docker-compose.yaml
@@ -38,8 +38,10 @@ services:
       - LDAP_ROOT=dc=peacockelgap,dc=pl
       - LDAP_ADMIN_USERNAME=admin
       - LDAP_ADMIN_PASSWORD=admin
-      - LDAP_USERS=user1,user2
-      - LDAP_PASSWORDS=password1,password2
+      - LDAP_CUSTOM_LDIF_DIR=/ldifs
+#      - LDAP_SKIP_DEFAULT_TREE=yes
+#      - LDAP_USERS=u1
+#      - LDAP_PASSWORDS=p1
     ports:
       - "1389:1389"
       - "1636:1636"
@@ -47,6 +49,8 @@ services:
       - my-local-network
     volumes:
       - openldap:/bitnami/openldap
+      # Location of ldif to be loaded on startup
+      - ./ldap-init:/ldifs
 
   # Keycloak
   keycloak:
